--- a/index.html
+++ b/index.html
@@ -5,8 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="weather.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,600;1,300&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   </head>
   <body>
-    <h1>Hello Git</h1>
+    <div class="container">
+      <div class="row upper">
+        <div class="col-10">
+          <form>
+            <input
+              type="text"
+              id="enter-city"
+              placeholder="Enter a city"
+              autofocus
+              on
+            />
+            <input type="submit" value="Find" />
+          </form>
+        </div>
+        <div class="col-2">
+          <button>Current location</button>
+        </div>
+      </div>
+      <div class="row middle">
+        <div class="col-3">
+          <img class="top-img" src="images/clouds.png" alt="clouds" />
+        </div>
+        <div class="col-9 data">
+          <div class="city" id="choosen-city">Berlin</div>
+          <div class="temperature">
+            <span class="temp-number">19</span>
+            <span class="temp-cf"
+              ><a href="#" id="cel">°C</a> | <a href="#" id="fah">°F</a></span
+            >
+          </div>
+          <div class="today" id="current-time"></div>
+        </div>
+      </div>
+      <div class="bottom">
+        <div class="row">
+          <div class="col day">TUE</div>
+          <div class="col day">WED</div>
+          <div class="col day">THU</div>
+          <div class="col day">FRI</div>
+          <div class="col day">SAT</div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <img src="images/partly-cloudy.png" alt="" />
+          </div>
+          <div class="col">
+            <img src="images/Rain.png" alt="" />
+          </div>
+          <div class="col">
+            <img src="images/Snow.png" alt="" />
+          </div>
+          <div class="col">
+            <img src="images/sunny.png" alt="" />
+          </div>
+          <div class="col">
+            <img src="images/thunder.png" alt="" />
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">10°</div>
+          <div class="col">11°</div>
+          <div class="col">7°</div>
+          <div class="col">5°</div>
+          <div class="col">4°</div>
+        </div>
+      </div>
+    </div>
+    <script src="weather.js"></script>
   </body>
 </html>
