--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
         </div>
       </div>
     </div>
+    <p>
+      <a href="https://github.com/ElenaHoncharova/weather-app"
+        >Open-sourse code</a
+      >
+      by Elena
+    </p>
     <script src="weather.js"></script>
   </body>
 </html>
