Changed html and css, added weather-details

--- a/index.html
+++ b/index.html
@@ -45,13 +45,24 @@
         </div>
         <div class="col-9 data">
           <div class="city" id="choosen-city">Berlin</div>
-          <div class="temperature">
-            <span class="temp-number">19</span>
-            <span class="temp-cf"
-              ><a href="#" id="cel">°C</a> | <a href="#" id="fah">°F</a></span
-            >
+          <div class="row">
+            <div class="col-2">
+              <div class="temperature">
+                <div class="temp-number">19</div>
+                <div class="temp-cf">
+                  <a href="#" id="cel">°C </a> | <a href="#" id="fah"> °F</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 weather-details">
+              <ul>
+                <li class="today" id="current-time"></li>
+                <li>Partly cloudy</li>
+                <li>Humidity: 54%</li>
+                <li>Wind: 12km/h</li>
+              </ul>
+            </div>
           </div>
-          <div class="today" id="current-time"></div>
         </div>
       </div>
       <div class="bottom">
