Little space changing in the row middle

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           <img class="top-img" src="images/clouds.png" alt="clouds" />
         </div>
         <div class="col-9 data">
-          <div class="city" id="choosen-city">Berlin</div>
-          <div class="row">
+          <div class="city" id="choosen-city">Kyiv</div>
+          <div class="row current-weather">
             <div class="col-2">
               <div class="temperature">
                 <div class="temp-number">19</div>
