Changed in .temperature

--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
         <div class="col-9 data">
           <div class="city" id="choosen-city">Kyiv</div>
           <div class="row current-weather">
-            <div class="col-2">
-              <div class="temperature">
-                <div class="temp-number">19</div>
-                <div class="temp-cf">
-                  <a href="#" id="cel">°C </a> | <a href="#" id="fah"> °F</a>
-                </div>
+            <div class="col-2 temperature">
+              <div class="temp-number">19</div>
+              <div class="temp-cf">
+                <a href="#" id="cel">°C </a> | <a href="#" id="fah"> °F</a>
               </div>
             </div>
             <div class="col-6 weather-details">
