Started js for weather-details

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <div class="col-6 weather-details">
               <ul>
                 <li class="today" id="current-time"></li>
-                <li>Partly cloudy</li>
-                <li>Humidity: 54%</li>
-                <li>Wind: 12km/h</li>
+                <li id="sky">Partly cloudy</li>
+                <li id="humidity">Humidity: 54%</li>
+                <li id="wind">Wind: 12km/h</li>
               </ul>
             </div>
           </div>
