Finished js for description, added capitalise for first letter

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <div class="col-6 weather-details">
                 <ul>
                   <li class="today" id="current-time"></li>
-                  <li id="sky">Partly cloudy</li>
+                  <li class="description" id="sky">Partly cloudy</li>
                   <li id="humidity">Humidity: 54%</li>
                   <li id="wind">Wind: 12km/h</li>
                 </ul>
