Finished js for date

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <img class="top-img" src="images/clouds.png" alt="clouds" />
           </div>
           <div class="col-9 data">
-            <div class="city" id="choosen-city">Kyiv</div>
+            <div class="city" id="choosen-city"></div>
             <div class="row current-weather">
               <div class="col-2 temperature">
-                <div class="temp-number">19</div>
+                <div class="temp-number"></div>
                 <div class="temp-cf">
                   <a href="#" id="cel">°C </a> | <a href="#" id="fah"> °F</a>
                 </div>
@@ -62,9 +62,9 @@
               <div class="col-6 weather-details">
                 <ul>
                   <li class="today" id="current-time"></li>
-                  <li class="description" id="sky">Partly cloudy</li>
-                  <li id="humidity">Humidity: 54%</li>
-                  <li id="wind">Wind: 12km/h</li>
+                  <li class="description" id="sky"></li>
+                  <li id="humidity"></li>
+                  <li id="wind"></li>
                 </ul>
               </div>
             </div>
