Added changing from C to F. Added class "active"

--- a/index.html
+++ b/index.html
@@ -54,17 +54,18 @@
             <div class="city" id="choosen-city"></div>
             <div class="row current-weather">
               <div class="col-2 temperature">
-                <div class="temp-number"></div>
+                <div class="temp-number" id="current-temp"></div>
                 <div class="temp-cf">
-                  <a href="#" id="cel">°C </a> | <a href="#" id="fah"> °F</a>
+                  <a href="#" class="active" id="cel">°C </a> <b>|</b>
+                  <a href="#" id="fah"> °F</a>
                 </div>
               </div>
               <div class="col-6 weather-details">
                 <ul>
-                  <li class="today" id="current-time"></li>
                   <li class="description" id="sky"></li>
                   <li id="humidity"></li>
                   <li id="wind"></li>
+                  <li class="today" id="current-time"></li>
                 </ul>
               </div>
             </div>
