Added test icons

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
         </div>
         <div class="row middle">
           <div class="col-3">
-            <img class="top-img" src="images/clouds.png" alt="clouds" />
+            <img
+              class="top-img"
+              id="big-icon"
+              src="images/clouds.png"
+              alt="clouds"
+            />
           </div>
           <div class="col-9 data">
             <div class="city" id="choosen-city"></div>
