--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
         <a
           href="https://github.com/ElenaHoncharova/weather-app"
           class="bottom-link"
+          target="_blank"
           >Open-sourse code</a
         >
         by Elena
