--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
   </head>
   <body>
     <div class="project">
-      <div class="container-background">
-        <div class="container">
+      <div class="container">
+        <div class="container-content">
           <form>
             <input
               type="text"
