Added class parent-top-img to align top-img vertically

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           <h1 class="city" id="choosen-city"></h1>
           <div class="row middle">
-            <div class="col-4">
+            <div class="col-4 parent-top-img">
               <img class="top-img" id="big-icon" src="" alt="" />
             </div>
             <div class="col-4 data">
