Added flex for temperature on a mobile version

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
           <h1 class="city" id="choosen-city"></h1>
           <div class="row middle">
-            <div class="col-4 data">
+            <div class="col-12 col-sm-4 data">
               <div class="temperature">
                 <div class="temp-number" id="current-temp"></div>
                 <div class="temp-cf">
@@ -54,10 +54,10 @@
                 </div>
               </div>
             </div>
-            <div class="col-4 parent-top-img">
+            <div class="col-6 order-sm-first col-sm-4 parent-top-img">
               <img class="top-img" id="big-icon" src="" alt="" />
             </div>
-            <div class="col-4 weather-details">
+            <div class="col-6 col-sm-4 weather-details">
               <ul>
                 <li class="today" id="current-time"></li>
                 <li class="description" id="sky"></li>
